Added Edit model changed notification

--- a/Nodes/NetLogic/NetLogic.yaml
+++ b/Nodes/NetLogic/NetLogic.yaml
@@ -225,6 +225,9 @@ Children:
       ValueRank: OneDimension
       ArrayDimensions: [0]
       Value: [{"TypeId":{"Id":296},"Body":{"Name":"editModelId","DataType":{"Id":17},"ValueRank":-1,"ArrayDimensions":[],"Description":{"NamespaceIndex":-1,"LocaleId":"","Text":""}}}]
+  - Name: EditModelChanged
+    Type: BaseDataVariableType
+    DataType: Boolean
 - Name: EmailSenderLogic
   Type: NetLogic
   WriteMask: BrowseName|DataType|Description|DisplayName|MinimumSamplingInterval|UserAccessLevel
