--- a/Nodes/UI/Screens/Screens.yaml
+++ b/Nodes/UI/Screens/Screens.yaml
@@ -2233,6 +2233,44 @@ Children:
           DataType: DynamicLinkMode
           ModellingRule: Optional
           Value: 2
+  - Name: Label1
+    Type: Label
+    Children:
+    - Name: Text
+      Type: BaseDataVariableType
+      DataType: LocalizedText
+      ModellingRule: Optional
+      Value: {"LocaleId":"en-US","Text":"Editmodel is changed (bit toggles at every change)"}
+    - Name: Width
+      Type: BaseVariableType
+      DataType: Size
+      ModellingRule: Optional
+      Value: 280.0
+  - Name: Label2
+    Type: Label
+    Children:
+    - Name: Text
+      Type: BaseDataVariableType
+      DataType: LocalizedText
+      Children:
+      - Name: DynamicLink
+        Type: DynamicLink
+        DataType: NodePath
+        Value: "/Objects/DEG_demo_2_recipes/NetLogic/RecipeController/EditModelChanged"
+    - Name: Width
+      Type: BaseVariableType
+      DataType: Size
+      ModellingRule: Optional
+      Value: 280.0
+    - Name: LeftMargin
+      Type: BaseVariableType
+      DataType: Size
+      ModellingRule: Optional
+      Value: 280.0
+    - Name: TopMargin
+      Type: BaseVariableType
+      DataType: Size
+      ModellingRule: Optional
 - Name: UserEditor
   Id: g=99d407cdcdd36703d6e48edf6f29abb3
   Supertype: Screen
